# rumqtt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD-CONFORMANCE-SUITE.md  CHANGE.md  CHANGELOG.md  CHANGES.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES.md  TODO.md  TODO2.md  TODO3.md  TODO4.md  TODO5.md  TODO6.md  TODO7.md  TODO8.md  clippy.toml  discussion-reminder.md  good-pulls
benchmarks/: BENCHMARKING.md  Cargo.toml  PERSISTENCE-RESULTS.md  PERSISTENCE.md  README.md  broker_fixture.py  go.mod  go.sum  regression.py  runner.py
benchmarks/baselines/: persistence-linux-2026-07-21.json
benchmarks/clients/: common.rs  rumqttasync.rs  rumqttasyncqos0.rs  rumqttsync.rs  rumqttv5bench.rs
benchmarks/parsers/: common.rs  nats.rs  v4.rs  v5.rs
benchmarks/results/: benchmarks.html
benchmarks/scenarios/: client-v4-connections-tcp.toml  client-v4-connections-tls.toml  client-v4-latency-qos0-rate-100.toml  client-v4-latency-qos0-rate-1000.toml  client-v4-latency-qos1-rate-100.toml  client-v4-latency-qos1-rate-1000.toml  client-v4-soak-qos1-1kib-1p1s.toml  client-v4-throughput-qos0-16kib-1p1s.toml  client-v4-throughput-qos0-1kib-1p1s.toml  client-v4-throughput-qos0-64b-1p1s.toml  client-v4-throughput-qos1-16kib-1p1s.toml  client-v4-throughput-qos1-1kib-1p1s.toml  client-v4-throughput-qos1-1kib-1p4s.toml  client-v4-throughput-qos1-1kib-4p1s.toml  client-v4-throughput-qos1-64b-1p1s.toml  client-v4-throughput-qos1.toml  client-v4-throughput-tls-qos1-1kib-1p1s.toml  client-v4-throughput-websocket-qos1-1kib-1p1s.toml  client-v5-connections-tcp.toml  client-v5-connections-tls.toml  client-v5-latency-qos0-rate-100.toml  client-v5-latency-qos0-rate-1000.toml  client-v5-latency-qos1-rate-100.toml  client-v5-latency-qos1-rate-1000.toml  client-v5-latency-qos1.toml  client-v5-soak-qos1-1kib-1p1s.toml  client-v5-throughput-qos0-16kib-1p1s.toml  client-v5-throughput-qos0-1kib-1p1s.toml  client-v5-throughput-qos0-64b-1p1s.toml  client-v5-throughput-qos1-16kib-1p1s.toml  client-v5-throughput-qos1-1kib-1p1s.toml  client-v5-throughput-qos1-1kib-1p4s.toml  client-v5-throughput-qos1-1kib-4p1s.toml  client-v5-throughput-qos1-64b-1p1s.toml  client-v5-throughput-qos1.toml  client-v5-throughput-tls-qos1-1kib-1p1s.toml  client-v5-throughput-websocket-qos1-1kib-1p1s.toml  codec-v4-publish-decode-0b.toml  codec-v4-publish-decode-16kib.toml  codec-v4-publish-decode-1kib.toml  (+33 more)
benchmarks/schema/: rumqtt-bench-output-v1.schema.json
benchmarks/scripts/: run_batch_latency_matrix_8420fdf5_vs_63ee4d98.sh  run_batch_matrix_8420fdf5_vs_63ee4d98.sh  run_e2e_local.sh
benchmarks/simplerouter/: Cargo.toml
benchmarks/src/: main.rs
benchmarks/tests/: codec_smoke.rs  test_broker_fixture.py  test_runner.py  v5_bench_tcp_e2e.rs  v5_bench_tls_e2e.rs
docs/: design.md  (+2 more)
mqttbytes-core/: Cargo.toml  README.md
mqttbytes-core/src/: lib.rs  ping.rs  primitives.rs  qos.rs  topic.rs
rumqttc/: CHANGELOG.md  Cargo.toml  README.md
rumqttc-core/: Cargo.toml  README.md
rumqttc-core/src/: lib.rs  proxy.rs  scheduler.rs  tls.rs  websockets.rs
rumqttc-core/tests/: mptcp.rs
rumqttc-next/: Cargo.toml  README.md
rumqttc-next/src/: lib.rs
rumqttc-session-store-file-core-next/: Cargo.toml  README.md
rumqttc-session-store-file-core-next/src/: lib.rs  tests.rs
rumqttc-v4/: Cargo.toml  README.md  design.md
rumqttc-v4/examples/: async_manual_acks.rs  asyncpubsub.rs  auth.rs  broker_recipe_smoke.rs  diagnostics_snapshot.rs  lifecycle_tracing.rs  migration_v4.rs  persistent_session_file_store.rs  resubscribe_on_reconnect.rs  serde.rs  socks5_proxy.rs  syncpubsub.rs  syncrecv.rs  tls.rs  tls2.rs  tls_native.rs  tracked_notices.rs  typed_client_v4.rs  unbounded.rs  websocket.rs  websocket_headers.rs  websocket_proxy.rs  wss.rs
rumqttc-v4/src/: client.rs  eventloop.rs  framed.rs  instrumentation.rs  lib.rs  notice.rs  proxy.rs  session.rs  state.rs  tls.rs  transport.rs  websockets.rs
rumqttc-v4/tests/: broker.rs  mqtt_options.rs  reliability.rs  smoke.rs  tracing_behavior.rs  tracing_log_compat.rs  turmoil.rs  websocket_integration.rs
rumqttc-v5/: Cargo.toml  README.md  design.md
rumqttc-v5-session-store-file-next/: Cargo.toml  README.md
rumqttc-v5-session-store-file-next/examples/: persistent_session_file_store_v5.rs
rumqttc-v5-session-store-file-next/src/: lib.rs  tests.rs
rumqttc-v5/examples/: async_auth_oauth.rs  async_auth_scram.rs  async_manual_acks_v5.rs  asyncpubsub_v5.rs  auth.rs  broker_recipe_smoke_v5.rs  diagnostics_snapshot_v5.rs  lifecycle_tracing_v5.rs  migration_v5.rs  persistent_session_file_store_v5.rs  resubscribe_on_reconnect_v5.rs  socks5_proxy_v5.rs  subscription_ids.rs  sync_auth_scram.rs  syncpubsub_v5.rs  syncrecv_v5.rs  tls_client_auth_v5.rs  tls_v5.rs  topic_alias.rs  tracked_notices_v5.rs  typed_client_v5_connect_properties.rs  typed_client_v5_publish_properties.rs  websocket_headers_v5.rs  websocket_proxy_v5.rs  websocket_v5.rs  wss_v5.rs
rumqttc-v5/src/: auth.rs  client.rs  eventloop.rs  framed.rs  instrumentation.rs  lib.rs  notice.rs  proxy.rs  session.rs  state.rs  transport.rs  websockets.rs
rumqttc-v5/tests/: broker.rs  mqtt_options.rs  reliability.rs  state.rs  tracing_behavior.rs  tracing_log_compat.rs  turmoil.rs  websocket_integration.rs
rumqttc/benches/: handle_incoming_packet.rs
rumqttc/examples/: async_auth_oauth.rs  async_auth_scram.rs  async_manual_acks.rs  async_manual_acks_v5.rs  asyncpubsub.rs  asyncpubsub_v5.rs  serde.rs  subscription_ids.rs  sync_auth_scram.rs  syncpubsub.rs  syncpubsub_v5.rs  syncrecv.rs  syncrecv_v5.rs  tls.rs  tls2.rs  tls_native.rs  topic_alias.rs  websocket.rs  websocket_proxy.rs
rumqttc/src/: client.rs  eventloop.rs  framed.rs  lib.rs  notice.rs  proxy.rs  state.rs  tls.rs  websockets.rs
rumqttc/tests/: broker.rs  mqtt_options.rs  notices_reset_integration.rs  reliability.rs  v5_broker.rs  websocket_integration.rs
session-store-file/: CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  clippy.toml
session-store-file/adapter/: Cargo.toml  README.md
(+197 files in other folders)
