[package]
name = "benchmarks"
version = "0.4.0"
publish = false
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
url = ["rumqttc_v4/url", "rumqttc_v5/url"]
websocket = ["rumqttc_v4/websocket", "rumqttc_v5/websocket"]

[dependencies]
bytes = "1"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rumqttc_v4 = { package = "rumqttc-v4-next", path = "../rumqttc-v4" }
rumqttc_v5 = { package = "rumqttc-v5-next", path = "../rumqttc-v5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.10"

[[bin]]
name = "rumqtt-bench"
path = "src/main.rs"
