[package]
name = "mqttbytes-core"
version = "0.27.0"
publish = true
description = "Shared MQTT bytes primitives for rumqttc crates"
keywords = ["mqtt", "iot", "codec"]
categories = ["network-programming"]
rust-version = "1.85.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.5"
thiserror = "2.0.8"
