[package]
name = "mqttbytes-core-next"
version = "0.30.0"
publish = true
description = "Shared MQTT packet primitives for the rumqttc-next client crates"
keywords = ["mqtt", "iot", "codec"]
categories = ["network-programming"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
name = "mqttbytes_core"

[dependencies]
bytes = "1.5"
thiserror = "2.0.8"
