[package]
name = "rumqttc-core-next"
version = "0.29.0"
publish = true
description = "Shared transport and connection plumbing for the rumqttc-next client crates"
keywords = ["mqtt", "iot", "transport"]
categories = ["network-programming"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
name = "rumqttc_core"

[package.metadata.docs.rs]
features = ["use-rustls", "use-rustls-no-provider", "use-native-tls", "websocket", "proxy"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["use-rustls"]
use-rustls = ["use-rustls-aws-lc"]
use-rustls-no-provider = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pki-types", "dep:rustls-native-certs", "async-tungstenite?/tokio-rustls-native-certs"]
use-rustls-ring = ["use-rustls-no-provider", "tokio-rustls/ring", "rustls-webpki/ring"]
use-rustls-aws-lc = ["use-rustls-no-provider", "tokio-rustls/aws_lc_rs", "rustls-webpki/aws-lc-rs"]
use-native-tls = ["dep:tokio-native-tls", "dep:native-tls", "async-tungstenite?/tokio-native-tls"]
websocket = ["dep:async-tungstenite", "dep:futures-io", "dep:http", "dep:futures-util"]
proxy = ["dep:async-http-proxy"]

[dependencies]
tokio = { version = "1.40", features = ["io-util", "net"] }
thiserror = "2.0.8"

# Optional
# rustls
tokio-rustls = { version = "0.26.0", optional = true, default-features = false }
rustls-webpki = { version = "0.103.12", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
# native-tls
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2.12", optional = true }
# websockets
async-tungstenite = { version = "0.34.0", default-features = false, features = ["tokio-runtime", "futures-03-sink"], optional = true }
futures-io = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
http = { version = "1.0.0", optional = true }
# proxy
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt", "net"] }
