[package]
name = "rumqttc-v4-next"
version = "0.34.0-alpha"
publish = true
autoexamples = false
description = "Explicit MQTT 3.1.1 client crate in the rumqttc-next family"
keywords = ["mqtt", "iot", "coap", "http"]
categories = ["network-programming"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
name = "rumqttc"

[package.metadata.docs.rs]
features = ["use-rustls", "use-rustls-no-provider", "use-native-tls", "websocket", "proxy", "http-proxy", "socks-proxy", "url", "stream", "tracing", "tracing-log-compat"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["use-rustls"]
use-rustls = ["use-rustls-aws-lc"]
use-rustls-no-provider = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pki-types", "dep:rustls-native-certs", "async-tungstenite?/tokio-rustls-native-certs", "rumqttc-core/use-rustls-no-provider"]
use-rustls-ring = ["use-rustls-no-provider", "tokio-rustls/ring", "rustls-webpki/ring", "rumqttc-core/use-rustls-ring"]
use-rustls-aws-lc = ["use-rustls-no-provider", "tokio-rustls/aws_lc_rs", "rustls-webpki/aws-lc-rs", "rumqttc-core/use-rustls-aws-lc"]
use-native-tls = ["dep:tokio-native-tls", "dep:native-tls", "async-tungstenite?/tokio-native-tls", "rumqttc-core/use-native-tls"]
websocket = ["dep:async-tungstenite", "dep:futures-io", "dep:http", "rumqttc-core/websocket"]
proxy = ["http-proxy", "socks-proxy"]
http-proxy = ["rumqttc-core/http-proxy"]
socks-proxy = ["rumqttc-core/socks-proxy"]
url = ["dep:url", "dep:percent-encoding"]
stream = ["dep:futures-core"]
tracing = ["dep:tracing"]
tracing-log-compat = ["tracing", "tracing/log"]

[dependencies]
futures-core = { version = "0.3", default-features = false, optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1.40", features = ["rt", "macros", "io-util", "net", "time", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
log = "0.4"
flume = { version = "0.12", default-features = false, features = ["async"] }
thiserror = "2.0.8"
rumqttc-core = { package = "rumqttc-core-next", path = "../rumqttc-core", version = "0.34.0-alpha", default-features = false }
mqttbytes-core = { package = "mqttbytes-core-next", path = "../mqttbytes-core", version = "0.34.0-alpha" }

# Optional
# rustls
tokio-rustls = { version = "0.26.0", optional = true, default-features = false }
rustls-webpki = { version = "0.103.12", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
# websockets
async-tungstenite = { version = "0.34.0", default-features = false, features = ["tokio-runtime", "futures-03-sink"], optional = true }
http = { version = "1.0.0", optional = true }
# native-tls
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2.12", optional = true }
# url
percent-encoding = { version = "2", optional = true }
url = { version = "2", default-features = false, optional = true }
fixedbitset = "0.5.7"
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
wincode = { version = "0.6.0", features = ["derive"] }
color-backtrace = "0.7.2"
matches = "0.1"
pretty_assertions = "1"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.30"
rcgen = "0.14"
criterion = "0.8.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry"] }
turmoil = "0.7.2"

[[example]]
name = "async_manual_acks"
path = "examples/async_manual_acks.rs"

[[example]]
name = "asyncpubsub"
path = "examples/asyncpubsub.rs"

[[example]]
name = "auth_v4"
path = "examples/auth.rs"

[[example]]
name = "serde"
path = "examples/serde.rs"

[[example]]
name = "migration_v4"
path = "examples/migration_v4.rs"

[[example]]
name = "syncpubsub"
path = "examples/syncpubsub.rs"

[[example]]
name = "syncrecv"
path = "examples/syncrecv.rs"

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["use-rustls"]

[[example]]
name = "tls_native"
path = "examples/tls_native.rs"
required-features = ["use-native-tls"]

[[example]]
name = "tls2"
path = "examples/tls2.rs"
required-features = ["use-rustls"]

[[example]]
name = "tracked_notices"
path = "examples/tracked_notices.rs"

[[example]]
name = "diagnostics_snapshot"
path = "examples/diagnostics_snapshot.rs"

[[example]]
name = "lifecycle_tracing"
path = "examples/lifecycle_tracing.rs"
required-features = ["tracing"]

[[example]]
name = "resubscribe_on_reconnect"
path = "examples/resubscribe_on_reconnect.rs"

[[example]]
name = "unbounded_v4"
path = "examples/unbounded.rs"

[[example]]
name = "websocket"
path = "examples/websocket.rs"
required-features = ["websocket"]

[[example]]
name = "websocket_proxy"
path = "examples/websocket_proxy.rs"
required-features = ["websocket", "http-proxy"]

[[example]]
name = "socks5_proxy"
path = "examples/socks5_proxy.rs"
required-features = ["socks-proxy"]

[[example]]
name = "websocket_headers"
path = "examples/websocket_headers.rs"
required-features = ["websocket"]

[[example]]
name = "wss"
path = "examples/wss.rs"
required-features = ["websocket", "use-rustls"]

[[test]]
name = "tracing_log_compat"
path = "tests/tracing_log_compat.rs"
required-features = ["tracing-log-compat"]

[[test]]
name = "tracing_behavior"
path = "tests/tracing_behavior.rs"
required-features = ["tracing"]
