[package]
name = "rumqttc-next"
version = "0.27.0"
publish = true
description = "An efficient and robust mqtt client for your connected devices"
keywords = ["mqtt", "iot", "coap", "http"]
categories = ["network-programming"]
rust-version = "1.85.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rumqttc"

[package.metadata.docs.rs]
features = ["use-rustls", "use-rustls-no-provider", "use-native-tls", "websocket", "proxy", "auth-scram", "url"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["use-rustls"]
use-rustls = ["use-rustls-aws-lc"]
use-rustls-no-provider = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pki-types", "dep:rustls-native-certs", "async-tungstenite?/tokio-rustls-native-certs"]
use-rustls-ring = ["use-rustls-no-provider", "tokio-rustls/ring", "rustls-webpki/ring"]
use-rustls-aws-lc = ["use-rustls-no-provider", "tokio-rustls/aws_lc_rs", "rustls-webpki/aws-lc-rs"]
use-native-tls = ["dep:tokio-native-tls", "dep:native-tls", "async-tungstenite?/tokio-native-tls"]
websocket = ["dep:async-tungstenite", "dep:futures-io", "dep:http"]
proxy = ["dep:async-http-proxy"]
auth-scram = ["dep:scram"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1.40", features = ["rt", "macros", "io-util", "net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
log = "0.4"
flume = { version = "0.12", default-features = false, features = ["async"] }
thiserror = "2.0.8"

# Optional
# rustls
tokio-rustls = { version = "0.26.0", optional = true, default-features = false }
rustls-webpki = { version = "0.103.9", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
# websockets
async-tungstenite = { version = "0.33.0", default-features = false, features = ["tokio-runtime", "futures-03-sink"], optional = true }
http = { version = "1.0.0", optional = true }
# native-tls
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2.12", optional = true }
# url
url = { version = "2", default-features = false, optional = true }
# proxy
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }
tokio-stream = "0.1.16"
fixedbitset = "0.5.7"
#auth
scram = { version = "0.6.0", optional = true }

[dev-dependencies]
wincode = { version = "0.4.4", features = ["derive"] }
color-backtrace = "0.7.2"
matches = "0.1"
pretty_assertions = "1"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
tokio-tungstenite = "0.28"
rcgen = "0.14"
criterion = "0.5"

[[example]]
name = "async_auth_oauth"
path = "examples/async_auth_oauth.rs"
required-features = ["use-rustls"]

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["use-rustls"]

[[example]]
name = "tls_native"
path = "examples/tls_native.rs"
required-features = ["use-native-tls"]

[[example]]
name = "tls2"
path = "examples/tls2.rs"
required-features = ["use-rustls"]

[[example]]
name = "websocket"
path = "examples/websocket.rs"
required-features = ["websocket"]

[[example]]
name = "websocket_proxy"
path = "examples/websocket_proxy.rs"
required-features = ["websocket", "proxy"]

[[bench]]
name = "handle_incoming_packet"
harness = false
