[workspace]
members = ["core", "adapter", "consumer-tests", "benchmarks"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/thehouseisonfire/rumqtt"
license = "Apache-2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]

[profile.dev]
debug = false

[profile.release]
codegen-units = 1
lto = true
strip = true
