[package]
name = "rumqttc-session-store-file-next"
version = "0.34.0-alpha"
publish = true
description = "File-backed MQTT 3.1.1 and MQTT 5 persistent session stores for rumqttc-next"
keywords = ["mqtt", "persistence", "session"]
categories = ["filesystem", "network-programming"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
name = "rumqttc_session_store_file"

[features]
default = []
v4 = ["dep:rumqttc-v4"]
v5 = ["dep:rumqttc-v5"]

[dependencies]
rumqttc-v4 = { package = "rumqttc-v4-next", path = "../../rumqttc-v4", version = "0.34.0-alpha", default-features = false, optional = true }
rumqttc-v5 = { package = "rumqttc-v5-next", path = "../../rumqttc-v5", version = "0.34.0-alpha", default-features = false, optional = true }
rumqttc-session-store-file-core-next = { path = "../core", version = "0.34.0-alpha" }
thiserror = "2.0.8"

[dev-dependencies]
crc32c = "0.6"
pretty_env_logger = "0.5"
tempfile = "3"
tokio = { version = "1.40", features = ["macros", "rt", "time"] }

[[example]]
name = "persistent_session_file_store_v4"
required-features = ["v4"]

[[example]]
name = "persistent_session_file_store_v5"
required-features = ["v5"]

[[example]]
name = "persistent_session_file_store_dual"
required-features = ["v4", "v5"]
