[package]
name = "atomic-blob-store"
version = "0.1.0-alpha.1"
publish = true
description = "Bounded crash-consistent keyed blob snapshots for trusted local filesystems"
keywords = ["atomic", "filesystem", "persistence", "snapshot"]
categories = ["filesystem"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[features]
default = []
bench-instrumentation = []

[dependencies]
blake3 = { version = "1.8", features = ["pure"] }
crc32c = "0.6"
thiserror = "2.0.8"
tokio = { version = "1.40", features = ["rt", "sync"] }

[target.'cfg(any(unix, windows))'.dependencies]
getrandom = { version = "0.4", features = ["std"] }

[target.'cfg(unix)'.dependencies]
atomic-write-file = "0.3"
rustix = { version = "1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
