[package]
name = "session-store-file-benchmarks"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
rand = "0.10"
rumqttc_store_core = { package = "rumqttc-session-store-file-core-next", path = "../core", features = ["bench-instrumentation"] }
rumqttc_v4 = { package = "rumqttc-v4-next", path = "../../rumqttc-v4" }
rumqttc_v4_store = { package = "rumqttc-v4-session-store-file-next", path = "../v4" }
rumqttc_v5 = { package = "rumqttc-v5-next", path = "../../rumqttc-v5" }
rumqttc_v5_store = { package = "rumqttc-v5-session-store-file-next", path = "../v5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rumqtt-session-store-file-bench"
path = "src/main.rs"
